fix hover UX on mobile

--- a/src/styles/_list.scss
+++ b/src/styles/_list.scss
@@ -25,8 +25,10 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
 
-    &:hover {
-        background-color: var(--library_back_color_hover);
+    @media screen and (min-width: 769px) {
+        &:hover {
+            background-color: var(--library_back_color_hover);
+        }
     }
 
     img {
